--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,14 +1,161 @@
 :root {
 
---fuente: .staatliches-regular {
-    font-family: "Staatliches", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+  box-sizing: border-box;
+  font-size: 62.5%;
 
-  --principal: ;
-  --principal_oscuro: ;
-  --secundario: ;
-  --secundario_oscuro: ;
+--fuente: "Staatliches", sans-serif;
+
+
+
+  
+  --principal: #9C2780;
+  --principal_oscuro: #891190;
+  --secundario: #ffce00;
+  --secundario_oscuro: rgb(233,287,2);
+  --blanco: #fff;
+  --negro: #000;
 
 }
+
+html {
+}
+
+body {
+  background-color: var(--principal);
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+p {
+  font-size: 1.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--blanco);
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+.contenedor {
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
+h1, h2, h3 {
+  text-align: center;
+  color: var(--secundario);
+  font-family: var(--fuente);
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2{
+  font-size: 3.2rem;
+}
+
+h3 {
+  font-size: 2.4rem;
+}
+
+/**encabezado**/
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.header__logo {
+  margin: 3rem 0;
+}
+
+/**Barra de navegación**/
+
+.navegacion {
+  display: flex;
+  justify-content: center;
+  background-color: var(--principal_oscuro);
+  padding: 1rem 0;
+  gap: 2rem;
+}
+
+.navegacion__enlace {
+  font-family: var(--fuente);
+  color: var(--blanco);
+  font-size: 3rem;
+
+}
+
+.navegacion__enlace--activo,
+.navegacion__enlace:hover {
+  color: var(--secundario);
+}
+
+/**Pie de página**/
+.footer {
+  display: flex;
+  background-color: var(--principal_oscuro);
+  justify-content: center;
+  padding: 1.5rem 0;
+  margin: 2rem 0;
+  
+}
+
+.footer__texto {
+  color: var(--blanco);
+  font-family: var(--fuente);
+  font-size: 2.2rem;
+  font
+}
+
+/**Modelando los productos**/
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+}
+
+.producto {
+
+}
+
+.producto__imagen {
+
+}
+
+.producto__informacion {
+
+}
+
+.producto__nombre {
+
+}
+
+.producto__precio {
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
