--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -109,40 +109,76 @@ h3 {
   color: var(--blanco);
   font-family: var(--fuente);
   font-size: 2.2rem;
-  font
+  
 }
 
 /**Modelando los productos**/
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem; 
+}
+@media screen and (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .producto {
+  background-color: var(--principal_oscuro);
+  padding: 1rem;
+
 
 }
 
 .producto__imagen {
-
+  width: 100%;
 }
 
 .producto__informacion {
-
+  text-align: center;
 }
 
 .producto__nombre {
+  font-size: 4rem;
+  font-family: var(--fuente);
+  margin: 1rem;
 
 }
 
 .producto__precio {
+  color: var(--secundario);
+  font-size: 3rem;
+  font-family: var(--fuente);
+}
+
+.grafico {
+  min-height: 30rem;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
 
+.grafico--camisas {
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+  background-image: url(../img/grafico1.jpg);
+}
+
+.grafico--node {
+  background-image: url(../img/grafico2.jpg);
+  grid-column: 1 / 3;
+  grid-row: 8 / 9;
+}
 
 
-
-
-
+@media screen and (min-width: 768px) {
+  .grafico--node{
+    grid-row: 5 / 6;
+    grid-column: 2 / 4;
+  
+  }
+}
 
 
 
