--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -11,7 +11,7 @@
   --principal: #9C2780;
   --principal_oscuro: #891190;
   --secundario: #ffce00;
-  --secundario_oscuro: rgb(233,287,2);
+  --secundario_oscuro:  #d1a90b;
   --blanco: #fff;
   --negro: #000;
 
@@ -180,6 +180,112 @@ h3 {
   }
 }
 
+/**css nosotros**/
+.nosotros {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+}
+
+
+@media screen and (min-width: 768px) {
+  .nosotros {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+    
+  }
+  
+}
+
+
+.nosotros__imagen{
+  grid-row: 1 / 2;
+  width: 100%;
+
+}
+
+@media screen and (min-width: 768px) {
+  .nosotros__imagen {
+    grid-column: 2 / 3;
+  }
+}
+
+/**bloques antes de footer**/
+
+.bloques {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .bloques {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.bloque {
+  text-align: center;
+}
+
+.bloque__titulo {
+  margin-top: 0;
+}
+
+.bloque__imagen {
+  width: 100%;
+}
+
+/**sección css producto**/
+
+@media screen and (min-width: 768px) {
+  .camisa {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+}
+
+.camisa__imagen {
+  width: 100%;
+
+}
+
+.camisa__contenido {
+
+}
+
+.formulario {
+  
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 2rem;
+}
+
+.formulario__campo {
+  border-color: var(--principal_oscuro);
+  border-width: 1rem;
+  border-style: solid;
+  background-color: var(--principal);
+  color: var(--blanco);
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.formulario__submit {
+  background-color: var(--secundario);
+  border: none;
+  font-size: 2rem;
+  font-family: var(--fuente);
+  padding: 2rem;
+  transition: background-color 3s ease;
+  grid-column: 1 / 3;
+  margin-top: 2rem;
+}
+
+.formulario__submit:hover {
+  cursor: pointer;
+  background-color: var(--secundario_oscuro);
+}
 
 
 
